--- a/index.html
+++ b/index.html
@@ -1,16 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="content">
+        <ul class="content__container">
+          <li class="content__item">
+            <div class="content__header">
+              <div class="content__price price">
+                <span class="price__dollar">$</span>
+                <span class="price__number">29</span>
+                <span class="price__hr">/hr</span>
+              </div>
+              <div class="content__title">
+                <h3>UI & UX</h3>
+              </div>
+            </div>
+            <div class="content__box">
+              <div class="content__icon">
+                &#59104;
+              </div>
+              <ul class="content__list">
+                <li class="content__link">Brand idea</li>
+                <li class="content__link">Logo Inovation</li>
+                <li class="content__link">Structure of Design</li>
+                <li class="content__link">Quality of Design</li>
+                <li class="content__link">User friendly</li>
+              </ul>
+            </div>
+            <div class="content__btn">
+              <a href="#"> Place an order </a>
+            </div>
+            <div class="content__foot">
+              <p>Ordernow & get 15% Discount</p>
+            </div>
+          </li>
 
-<body>
-    <p> First
+          <li class="content__item">
+            <div class="content__popular popular">
+              <img
+                src="assets/img/1.svg"
+                alt="bubble"
+                class="popular__main-bubble"
+              />
+              <img src="assets/img/2.svg" alt="bubble" />
+              <span class="popular__letter">P</span>
+              <div class="popular__box">
+                <img src="assets/img/3.svg" alt="bubble" />
+                <span class="popular__text">Popular</span>
+              </div>
+            </div>
+            <div class="content__header">
+              <div class="content__price price">
+                <span class="price__dollar">$</span>
+                <span class="price__number">49</span>
+                <span class="price__hr">/hr</span>
+              </div>
+              <div class="content__title">
+                <h3>Webdesign</h3>
+              </div>
+            </div>
+            <div class="content__box">
+              <div class="content__icon">
+                &#58911;
+              </div>
+              <ul class="content__list">
+                <li class="content__link">2 - Wireframe option</li>
+                <li class="content__link">3 - logo Design Variation</li>
+                <li class="content__link">2 - Homepage Variation</li>
+                <li class="content__link">6 - Innerpage</li>
+                <li class="content__link">1 - Styleguide</li>
+              </ul>
+            </div>
+            <div class="content__btn">
+              <a href="#"> Place an order </a>
+            </div>
+            <div class="content__foot">
+              <p>Ordernow & get 15% Discount</p>
+            </div>
+          </li>
 
-    </p>
-</body>
+          <li class="content__item">
+            <div class="content__header">
+              <div class="content__price price">
+                <span class="price__dollar">$</span>
+                <span class="price__number">39</span>
+                <span class="price__hr">/hr</span>
+              </div>
+              <div class="content__title">
+                <h3>Web development</h3>
+              </div>
+            </div>
 
+            <div class="content__box">
+              <div class="content__icon">
+                &#59034;
+              </div>
+              <ul class="content__list">
+                <li class="content__link">PSD to HTML</li>
+                <li class="content__link">HTML to Wordpress</li>
+                <li class="content__link">PSD to Wordpress</li>
+                <li class="content__link">HTML to Drupal</li>
+                <li class="content__link">With Responsive</li>
+              </ul>
+            </div>
+            <div class="content__btn">
+              <a href="#"> Place an order </a>
+            </div>
+            <div class="content__foot">
+              <p>Ordernow & get 15% Discount</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
