--- a/index.html
+++ b/index.html
@@ -1,16 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Bhromaon</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@100;300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon.jpg" />
+  </head>
+  <body>
+    <header class="header wrapper">
+      <div class="header__container">
+        <div class="header__box">
+          <h1 class="header__title">Bhromaon</h1>
+          <p class="header__desc tag">Safe Travel Anywhere</p>
+        </div>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+        <div class="header__form-wrapper">
+          <form action="#" method="GET" class="header__form">
+            <input
+              class="header__input"
+              type="search"
+              name="search"
+              placeholder="Search Your Travel Destination"
+            />
+            <button type="submit" class="header__btn">
+              Search <span class="icon-search header__search"></span>
+            </button>
+          </form>
+        </div>
 
-<body>
-    <p> First
+        <div class="header__scroll">
+          <p>Scroll down</p>
+          <p class="icon-scroll header__icon"></p>
+        </div>
+      </div>
+    </header>
+    <section class="nav wrapper">
+      <div class="logo">
+        <span>Bhromaon</span>
+      </div>
+      <nav>
+        <div class="burger__conteiner">
+          <div class="burger"><span class="burger__line"></span></div>
+        </div>
+        <ul class="nav__list">
+          <li><a href="#" class="nav__link">Who We Are</a></li>
+          <li><a href="#" class="nav__link">What We Do</a></li>
+          <li><a href="#" class="nav__link">Travel With Us</a></li>
+          <li><a href="#" class="nav__link">Contact Us</a></li>
+        </ul>
+      </nav>
+    </section>
 
-    </p>
-</body>
+    <section class="choose wrapper">
+      <div class="choose__box">
+        <h3 class="choose__title">Why Choose Us</h3>
+        <p class="choose__desc">
+          Tion and dislike men who are so beguiled and demoralized by desire by
+          the charms of pleasure of the moment, so blinded by desire, that they
+          cannot foresee
+        </p>
 
+        <p class="choose__desc">
+          Ddislike men who are so beguiled and demoralized by the charms of
+          pleasure of the moment, so blinded by desire, that.
+        </p>
+        <a class="btn" href="#">Explore Places </a>
+      </div>
+      <div class="choose__img">
+        <img class="choose__img__1" src="assets/img/3.jpg" alt="photo" />
+        <img class="choose__img__2" src="assets/img/2.jpg" alt="photo" />
+      </div>
+    </section>
+
+    <section class="advantages wrapper">
+      <ul class="advantages__list">
+        <li class="advantages__link">
+          <span class="icon-search advantages__icon"></span>
+          <p>Search Places</p>
+        </li>
+        <li class="advantages__link">
+          <span class="icon-mark advantages__icon"></span>
+          <p>Select Places</p>
+        </li>
+        <li class="advantages__link">
+          <span class="icon-like advantages__icon"></span>
+          <p>Book & Enjoy</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="block block--first wrapper">
+      <div class="block__box">
+        <p class="block__country">Spain</p>
+        <h5 class="block__title">
+          Grand Spain Madrid
+        </h5>
+        <p class="block__desc">
+          But I must explain to you how all this mistaken idea of account to
+          denouncing pleasure and praising pain was account born and I account
+          will give you a complete account of the system
+        </p>
+        <a class="btn">book now</a>
+      </div>
+    </section>
+
+    <section class="block block--second wrapper">
+      <div class="block__box block__box--second">
+        <p class="block__country">Spain</p>
+        <h5 class="block__title">
+          Grand Spain Madrid
+        </h5>
+        <p class="block__desc">
+          But I must explain to you how all this mistaken idea of account to
+          denouncing pleasure and praising pain was account born and I account
+          will give you a complete account of the system
+        </p>
+        <a class="btn">book now</a>
+      </div>
+    </section>
+
+    <section class="review wrapper">
+      <div class="review__title">
+        <h3>That Our Tourist Say</h3>
+      </div>
+      <div class="review__box">
+        <img src="assets/img/4.jpg" alt="man" />
+
+        <div class="review__text">
+          <h5 class="review__subtitle">Sam Sumon</h5>
+          <p class="review__desc">
+            <span class="icon-quote review__icon"></span>
+            But I must explain to you how all this mistaken idea of account to
+            denouncinpleasure and praising pain But I must explain to you how
+            all this mistaken idea of account to nai denouncing pleasure and
+            praising pain was account born and I account will give you a
+            complete account of the system was account born and I account will
+            give you a nai the complete account of the system
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer wrapper">
+      <div class="footer__text">
+        <p class="logo footer__logo">Bhromaon</p>
+        <p class="tag footer__tag">Safe Travel Anywhere</p>
+      </div>
+      <ul class="footer__icons">
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            class="icon-facebook footer__link"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://twitter.com/"
+            target="_blank"
+            class="icon-twitter footer__link"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://ru.linkedin.com/"
+            target="_blank"
+            class="icon-linkedin footer__link"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            class="icon-youtube footer__link"
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.pinterest.com/"
+            target="_blank"
+            class="icon-pinterest footer__link"
+          ></a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
