--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <script src="script.js"></script>
 </head>
 
 <body>
-    <p> First
-
-    </p>
+   
 </body>
 
 </html>
