--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+    <link href="style.css" rel="stylesheet" />
+  </head>
 
-<body>
-    <p> First
-
-    </p>
-</body>
-
+  <body>
+    <script src="script.js"></script>
+  </body>
 </html>
